// LegisKids — Esquema do banco de dados
// Gerado a partir de src/backend/models.py
// Última atualização: add sync_executions + classificacao_status (sync-proposicoes-camara-ia)
//
// Para atualizar: edite este arquivo e reimporte no dbdiagram.io
// Exportar como erd.png e salvar em docs/db/erd.png

Table partidos {
  id      integer     [pk, note: "ID oficial da API da Câmara dos Deputados"]
  sigla   varchar(20) [not null, unique]
  nome    varchar(150) [not null]
}

Table proposicoes {
  id                  integer      [pk, note: "ID oficial da API da Câmara dos Deputados"]
  sigla_tipo          varchar(20)  [not null, note: "Ex: PL, PEC, MPV"]
  numero              integer      [not null]
  ano                 integer      [not null]
  ementa              text         [not null]
  data_apresentacao   date         [not null]
  descricao_situacao  varchar(150) [not null]
  partido_id          integer      [null, ref: > partidos.id, note: "ON DELETE SET NULL — pode ser nulo se partido não identificado"]
  sigla_partido        varchar(20)  [not null, note: "Cópia desnormalizada da sigla para leitura rápida"]
  data_coleta          datetime     [not null, note: "Timestamp automático da coleta via API"]
  classificacao_status varchar(30)  [not null, default: 'pendente_classificacao', note: "Estado da categorização por IA: pendente_classificacao | classificado"]

  indexes {
    (sigla_tipo, numero, ano) [unique, name: "uq_proposicao_tipo_numero_ano"]
  }
}

Table tramitacoes {
  id                    integer      [pk]
  proposicao_id         integer      [not null, ref: > proposicoes.id, note: "ON DELETE CASCADE"]
  data_hora             datetime     [not null]
  id_situacao           integer      [not null, note: "Código de situação conforme API da Câmara"]
  descricao_situacao    varchar(150) [not null]
  descricao_tramitacao  text         [not null]
  sigla_orgao           varchar(50)  [not null, note: "Órgão responsável pela tramitação (ex: PLEN, CCJ)"]
}

Table usuarios {
  id           integer      [pk]
  nome         varchar(100) [not null]
  email        varchar(150) [not null, unique]
  google_id    varchar(100) [not null, unique, note: "ID único do Google OAuth 2.0"]
  data_criacao datetime     [not null, note: "Timestamp automático do primeiro login"]
}

Table favoritos {
  id             integer  [pk]
  usuario_id     integer  [not null, ref: > usuarios.id, note: "ON DELETE CASCADE"]
  proposicao_id  integer  [not null, ref: > proposicoes.id, note: "ON DELETE CASCADE"]
  data_favorito  datetime [not null, note: "Timestamp automático ao salvar"]

  indexes {
    (usuario_id, proposicao_id) [unique, name: "uq_favorito_usuario_proposicao", note: "Impede que o mesmo usuário favorite a mesma proposição mais de uma vez"]
  }
}

Table historico_consultas {
  id             integer      [pk]
  usuario_id     integer      [not null, ref: > usuarios.id, note: "ON DELETE CASCADE"]
  termo_busca    varchar(255) [not null]
  data_consulta  datetime     [not null, note: "Timestamp automático da consulta"]
}

Table requisicoes_api {
  id                    integer      [pk]
  endpoint              varchar(255) [not null, note: "URL ou identificador do endpoint consultado na API da Câmara"]
  data_requisicao       datetime     [not null, note: "Timestamp automático da requisição"]
  quantidade_registros  integer      [not null, note: "Número de registros retornados na chamada"]
  status_requisicao     varchar(50)  [not null, note: "Ex: sucesso, erro_504, timeout"]
  tempo_execucao_ms     integer      [null, note: "Duração da chamada em milissegundos — campo de monitoramento opcional"]
}

Table sync_executions {
  id                integer      [pk]
  iniciado_em       timestamptz  [not null, note: "Timestamp UTC do início da execução"]
  finalizado_em     timestamptz  [null, note: "Timestamp UTC do fim — nulo enquanto em andamento"]
  status            varchar(30)  [not null, default: 'em_andamento', note: "em_andamento | concluido | concluido_parcial | erro_api | erro_interno"]
  total_processados integer      [not null, default: 0]
  total_inseridos   integer      [not null, default: 0]
  total_atualizados integer      [not null, default: 0]
  total_erros       integer      [not null, default: 0]
  mensagem_erro     text         [null, note: "Descrição do erro — nulo em execuções bem-sucedidas"]
}
